--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc --build",
-    "dev": "nodemon --exec ts-node index.ts"
+    "build": "tsc --build", 
+    "dev": "nodemon --exec ts-node ./src/App.ts"
   },
   "keywords": [],
   "author": "",
@@ -13,16 +13,13 @@
   "description": "",
   "dependencies": {
     "@types/cors": "^2.8.18",
-    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
-    "@types/cookie-parser": "^1.4.8",
     "@types/express": "^5.0.2",
-    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.15.19",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
