--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,11 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint . --ext .ts,.js",
+    "prebuild": "npm run lint",
     "build": "tsc --build",
-    "dev": "nodemon --exec ts-node ./src/App.ts"
+    "dev": "nodemon --exec ts-node ./src/App.ts",
+    "preview": "node ./dist/App.js"
   },
   "keywords": [],
   "author": "",
@@ -22,15 +25,20 @@
     "mongoose": "^8.15.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.27.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.2",
     "@types/express-session": "^1.18.1",
     "@types/express-validator": "^2.20.33",
+    "@types/module-alias": "^2.0.4",
     "@types/mongoose": "^5.11.96",
     "@types/node": "^22.15.19",
+    "eslint": "^9.27.0",
+    "globals": "^16.2.0",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.33.0"
   }
 }
