--- a/server/package.json
+++ b/server/package.json
@@ -26,7 +26,8 @@
     "mongoose": "^8.15.1",
     "morgan": "^1.10.0",
     "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.27.0",
@@ -40,6 +41,7 @@
     "@types/node": "^22.15.19",
     "@types/passport": "^1.0.17",
     "@types/passport-google-oauth20": "^2.0.16",
+    "@types/passport-local": "^1.0.38",
     "eslint": "^9.27.0",
     "globals": "^16.2.0",
     "nodemon": "^3.1.10",
