add github features

--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^8.15.1",
     "morgan": "^1.10.0",
     "passport": "^0.7.0",
+    "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0"
   },
@@ -40,6 +41,7 @@
     "@types/mongoose": "^5.11.96",
     "@types/node": "^22.15.19",
     "@types/passport": "^1.0.17",
+    "@types/passport-github2": "^1.2.9",
     "@types/passport-google-oauth20": "^2.0.16",
     "@types/passport-local": "^1.0.38",
     "eslint": "^9.27.0",
