--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
     "prebuild": "npm run lint",
     "build": "tsc --build",
     "dev": "nodemon --exec ts-node ./src/App.ts",
-    "preview": "node ./dist/App.js"
+    "start": "node ./dist/App.js"
   },
   "keywords": [],
   "author": "",
