--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "postcss": "^8.5.3",
     "react": "^19.1.0",
     "react-router-dom": "^7.6.0",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
