--- a/server/package.json
+++ b/server/package.json
@@ -28,7 +28,8 @@
     "passport": "^0.7.0",
     "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.27.0",
@@ -44,6 +45,7 @@
     "@types/passport-github2": "^1.2.9",
     "@types/passport-google-oauth20": "^2.0.16",
     "@types/passport-local": "^1.0.38",
+    "@types/socket.io": "^3.0.1",
     "eslint": "^9.27.0",
     "globals": "^16.2.0",
     "nodemon": "^3.1.10",
