add file upload and parsing them to text (.docx, doc, .pdf)

--- a/server/package.json
+++ b/server/package.json
@@ -23,12 +23,15 @@
     "express-session": "^1.18.1",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
+    "mammoth": "^1.9.1",
     "mongoose": "^8.15.1",
     "morgan": "^1.10.0",
+    "multer": "^2.0.1",
     "passport": "^0.7.0",
     "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
+    "pdf-parse": "^1.1.1",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
@@ -40,11 +43,13 @@
     "@types/express-validator": "^2.20.33",
     "@types/module-alias": "^2.0.4",
     "@types/mongoose": "^5.11.96",
+    "@types/multer": "^1.4.13",
     "@types/node": "^22.15.19",
     "@types/passport": "^1.0.17",
     "@types/passport-github2": "^1.2.9",
     "@types/passport-google-oauth20": "^2.0.16",
     "@types/passport-local": "^1.0.38",
+    "@types/pdf-parse": "^1.1.5",
     "@types/socket.io": "^3.0.1",
     "eslint": "^9.27.0",
     "globals": "^16.2.0",
