--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@faker-js/faker": "^9.9.0",
     "@tanstack/react-query": "^5.76.1",
     "autoprefixer": "^10.4.21",
     "lucide-react": "^0.511.0",
